notes on styling options for react applications

--- a/src/components/Modal.module.css
+++ b/src/components/Modal.module.css
@@ -15,7 +15,7 @@
     border-radius: 10px;
 }
 
-.modal .sales-btn{
+.sales-btn{
     border: 4px solid #333;
     font-size: 18px;
     text-transform: uppercase;
